# capvicam-cxx

./: .clang-format  CMakeLists.txt  README.md
src/: constants.h  main.cpp
src/capture/: capture.cpp  capture.h
src/circular-buffer/: circular-buffer.cpp  circular-buffer.h
src/mjpeg/: mjpeg.cpp  mjpeg.h
src/processing/: processing.cpp  processing.h
